--- a/auth.config
+++ b/auth.config
@@ -1,6 +1,5 @@
 [database]
 server = uranium.cs.umanitoba.ca
 database = cs3380
-username = singhr62
-password = 7964553
-
+username = nawaza1
+password = 7951458
