--- a/populate/auth.config
+++ b/populate/auth.config
@@ -1,5 +1,5 @@
 [database]
 server = uranium.cs.umanitoba.ca
 database = cs3380
-username = kashifm
-password = 7964392
+username = nawaza1
+password = 7951458
